cmake_minimum_required(VERSION 3.10.2)

add_library(rtmp STATIC
        ${CMAKE_SOURCE_DIR}/ArLive/rtmp/libaio/src/aio-accept.c
        ${CMAKE_SOURCE_DIR}/ArLive/rtmp/libaio/src/aio-client.c
        ${CMAKE_SOURCE_DIR}/ArLive/rtmp/libaio/src/aio-connect.c
        ${CMAKE_SOURCE_DIR}/ArLive/rtmp/libaio/src/aio-poll.c
        ${CMAKE_SOURCE_DIR}/ArLive/rtmp/libaio/src/aio-recv.c
        ${CMAKE_SOURCE_DIR}/ArLive/rtmp/libaio/src/aio-rwutil.c
        ${CMAKE_SOURCE_DIR}/ArLive/rtmp/libaio/src/aio-send.c
        ${CMAKE_SOURCE_DIR}/ArLive/rtmp/libaio/src/aio-tcp-transport.c
        ${CMAKE_SOURCE_DIR}/ArLive/rtmp/libaio/src/aio-timeout.c
        ${CMAKE_SOURCE_DIR}/ArLive/rtmp/libaio/src/aio-worker.c
        ${CMAKE_SOURCE_DIR}/ArLive/rtmp/libflv/source/amf0.c
        ${CMAKE_SOURCE_DIR}/ArLive/rtmp/libflv/source/amf3.c
        ${CMAKE_SOURCE_DIR}/ArLive/rtmp/libflv/source/aom-av1.c
        ${CMAKE_SOURCE_DIR}/ArLive/rtmp/libflv/source/flv-demuxer-script.c
        ${CMAKE_SOURCE_DIR}/ArLive/rtmp/libflv/source/flv-demuxer.c
        ${CMAKE_SOURCE_DIR}/ArLive/rtmp/libflv/source/flv-header.c
        ${CMAKE_SOURCE_DIR}/ArLive/rtmp/libflv/source/flv-muxer.c
        ${CMAKE_SOURCE_DIR}/ArLive/rtmp/libflv/source/flv-parser.c
        ${CMAKE_SOURCE_DIR}/ArLive/rtmp/libflv/source/flv-reader.c
        ${CMAKE_SOURCE_DIR}/ArLive/rtmp/libflv/source/flv-writer.c
        ${CMAKE_SOURCE_DIR}/ArLive/rtmp/libflv/source/hevc-annexbtomp4.c
        ${CMAKE_SOURCE_DIR}/ArLive/rtmp/libflv/source/hevc-mp4toannexb.c
        ${CMAKE_SOURCE_DIR}/ArLive/rtmp/libflv/source/mp3-header.c
        ${CMAKE_SOURCE_DIR}/ArLive/rtmp/libflv/source/mpeg4-aac-asc.c
        ${CMAKE_SOURCE_DIR}/ArLive/rtmp/libflv/source/mpeg4-aac.c
        ${CMAKE_SOURCE_DIR}/ArLive/rtmp/libflv/source/mpeg4-annexbtomp4.c
        ${CMAKE_SOURCE_DIR}/ArLive/rtmp/libflv/source/mpeg4-avc.c
        ${CMAKE_SOURCE_DIR}/ArLive/rtmp/libflv/source/mpeg4-hevc.c
        ${CMAKE_SOURCE_DIR}/ArLive/rtmp/libflv/source/mpeg4-mp4toannexb.c
        ${CMAKE_SOURCE_DIR}/ArLive/rtmp/libflv/source/opus-head.c
        ${CMAKE_SOURCE_DIR}/ArLive/rtmp/libflv/source/webm-vpx.c
        ${CMAKE_SOURCE_DIR}/ArLive/rtmp/librtmp/aio/aio-rtmp-client.c
        ${CMAKE_SOURCE_DIR}/ArLive/rtmp/librtmp/aio/aio-rtmp-transport.c
        ${CMAKE_SOURCE_DIR}/ArLive/rtmp/librtmp/source/rtmp-chunk-header.c
        ${CMAKE_SOURCE_DIR}/ArLive/rtmp/librtmp/source/rtmp-chunk-read.c
        ${CMAKE_SOURCE_DIR}/ArLive/rtmp/librtmp/source/rtmp-chunk-write.c
        ${CMAKE_SOURCE_DIR}/ArLive/rtmp/librtmp/source/rtmp-client.c
        ${CMAKE_SOURCE_DIR}/ArLive/rtmp/librtmp/source/rtmp-control-handler.c
        ${CMAKE_SOURCE_DIR}/ArLive/rtmp/librtmp/source/rtmp-control-message.c
        ${CMAKE_SOURCE_DIR}/ArLive/rtmp/librtmp/source/rtmp-event.c
        ${CMAKE_SOURCE_DIR}/ArLive/rtmp/librtmp/source/rtmp-handler.c
        ${CMAKE_SOURCE_DIR}/ArLive/rtmp/librtmp/source/rtmp-handshake.c
        ${CMAKE_SOURCE_DIR}/ArLive/rtmp/librtmp/source/rtmp-invoke-handler.c
        ${CMAKE_SOURCE_DIR}/ArLive/rtmp/librtmp/source/rtmp-netconnection.c
        ${CMAKE_SOURCE_DIR}/ArLive/rtmp/librtmp/source/rtmp-netstream.c
        ${CMAKE_SOURCE_DIR}/ArLive/rtmp/librtmp/source/rtmp-server.c
        ${CMAKE_SOURCE_DIR}/ArLive/rtmp/RtmpIO.cpp
        ${CMAKE_SOURCE_DIR}/ArLive/rtmp/RTRtmp.cpp
        ${CMAKE_SOURCE_DIR}/ArLive/rtmp/source/twtimer.c
        ${CMAKE_SOURCE_DIR}/ArLive/rtmp/source/port/aio-socket-epoll.c
          ${CMAKE_SOURCE_DIR}/ArLive/rtmp/librtsp/net/Acceptor.cpp
          ${CMAKE_SOURCE_DIR}/ArLive/rtmp/librtsp/net/BufferReader.cpp
          ${CMAKE_SOURCE_DIR}/ArLive/rtmp/librtsp/net/BufferWriter.cpp
          ${CMAKE_SOURCE_DIR}/ArLive/rtmp/librtsp/net/EpollTaskScheduler.cpp
          ${CMAKE_SOURCE_DIR}/ArLive/rtmp/librtsp/net/EventLoop.cpp
          ${CMAKE_SOURCE_DIR}/ArLive/rtmp/librtsp/net/Logger.cpp
          ${CMAKE_SOURCE_DIR}/ArLive/rtmp/librtsp/net/MemoryManager.cpp
          ${CMAKE_SOURCE_DIR}/ArLive/rtmp/librtsp/net/NetInterface.cpp
          ${CMAKE_SOURCE_DIR}/ArLive/rtmp/librtsp/net/Pipe.cpp
          ${CMAKE_SOURCE_DIR}/ArLive/rtmp/librtsp/net/SelectTaskScheduler.cpp
          ${CMAKE_SOURCE_DIR}/ArLive/rtmp/librtsp/net/SocketUtil.cpp
          ${CMAKE_SOURCE_DIR}/ArLive/rtmp/librtsp/net/TaskScheduler.cpp
          ${CMAKE_SOURCE_DIR}/ArLive/rtmp/librtsp/net/TcpConnection.cpp
          ${CMAKE_SOURCE_DIR}/ArLive/rtmp/librtsp/net/TcpSocket.cpp
          ${CMAKE_SOURCE_DIR}/ArLive/rtmp/librtsp/net/Timer.cpp
          ${CMAKE_SOURCE_DIR}/ArLive/rtmp/librtsp/net/Timestamp.cpp
        ${CMAKE_SOURCE_DIR}/ArLive/rtmp/librtsp/xop/AACSource.cpp
        ${CMAKE_SOURCE_DIR}/ArLive/rtmp/librtsp/xop/DigestAuthentication.cpp
        ${CMAKE_SOURCE_DIR}/ArLive/rtmp/librtsp/xop/G711ASource.cpp
        ${CMAKE_SOURCE_DIR}/ArLive/rtmp/librtsp/xop/H264Parser.cpp
        ${CMAKE_SOURCE_DIR}/ArLive/rtmp/librtsp/xop/H264Source.cpp
        ${CMAKE_SOURCE_DIR}/ArLive/rtmp/librtsp/xop/H265Source.cpp
        ${CMAKE_SOURCE_DIR}/ArLive/rtmp/librtsp/xop/MediaSession.cpp
        ${CMAKE_SOURCE_DIR}/ArLive/rtmp/librtsp/xop/RtpConnection.cpp
        ${CMAKE_SOURCE_DIR}/ArLive/rtmp/librtsp/xop/RtspConnection.cpp
        ${CMAKE_SOURCE_DIR}/ArLive/rtmp/librtsp/xop/RtspMessage.cpp
        ${CMAKE_SOURCE_DIR}/ArLive/rtmp/librtsp/xop/RtspPusher.cpp
        ${CMAKE_SOURCE_DIR}/ArLive/rtmp/librtsp/xop/VP8Source.cpp

        )

target_include_directories(rtmp PUBLIC
        ${CMAKE_SOURCE_DIR}/ArLive/rtmp/
        ${CMAKE_SOURCE_DIR}/ArLive/rtmp/include/
        ${CMAKE_SOURCE_DIR}/ArLive/rtmp/librtmp/
        ${CMAKE_SOURCE_DIR}/ArLive/rtmp/librtmp/include/
        ${CMAKE_SOURCE_DIR}/ArLive/rtmp/librtmp/source/
        ${CMAKE_SOURCE_DIR}/ArLive/rtmp/librtmp/aio/
        ${CMAKE_SOURCE_DIR}/ArLive/rtmp/libaio/include/
        ${CMAKE_SOURCE_DIR}/ArLive/rtmp/libflv/include/
        ${CMAKE_SOURCE_DIR}/ArLive/rtmp/librtsp/
        ${CMAKE_SOURCE_DIR}/ArLive/rtmp/librtsp/3rdpart/
        ${CMAKE_SOURCE_DIR}/ArLive/rtmp/librtsp/net/
        ${CMAKE_SOURCE_DIR}/ArLive/rtmp/librtsp/xop/
        ${CMAKE_SOURCE_DIR}/ArLive/rtmp/source/port/)
